started working on my mountains.

--- a/stles.css
+++ b/stles.css
@@ -14,3 +14,11 @@ body{
     z-index:3;
     position:absolute;
   }
+
+  .penguin
+  {
+    width:300px;
+    height:300px;
+    margin:auto;
+    margin-top:75px;
+  }
