--- a/stles.css
+++ b/stles.css
@@ -22,6 +22,11 @@ body{
     height:300px;
     margin:auto;
     margin-top:75px;
+    z-index:4;
+    position :relative;
+  }
+  .penguin *{
+    position:absolute;
   }
 
   .left-mountain{
@@ -51,4 +56,16 @@ body{
     border-radius:50%;
     top: -75px;
     right:-75;
+  }
+  .penguin-head{
+    width:50%;
+    height:45%;
+    background:linear-gradient(45deg, gray, rgb(239, 240, 228));
+    border-radius:70% 70% 65% 65%;
+  }
+  .penguin-body{
+    width:53%;
+    height:45%;
+    background:linear-gradient(45deg, rgb(134, 133, 133) 0%, rgb(234, 231, 231) 25%, white 67%);
+    border-radius:80% 80% 100% 100%;
   }
