--- a/stles.css
+++ b/stles.css
@@ -128,4 +128,16 @@ body {
   position: absolute;
   margin-top: -58px;
 }
-  
+.eye{
+  width:15%;
+  height:17%;
+  background-color:black;
+  top:45%;
+  border-radius:50%;
+}
+.eye.left{
+  left:25%;
+}
+.eye.right{
+  right:25%;
+}
