--- a/stles.css
+++ b/stles.css
@@ -1,5 +1,7 @@
 :root {
   --penguin-face: white;
+  --penguin-picorna:orange;
+  
 }
 
 body {
@@ -72,9 +74,9 @@ body {
 .face {
   width: 60%;
   height: 70%;
+  background-color: var(--penguin-face);
   border-radius: 70% 70% 60% 60%;
   top: 15%;
-  background-color:var(--penguin-face);
 }
 
 .face.left {
@@ -88,10 +90,83 @@ body {
 .chin {
   width: 90%;
   height: 70%;
-  background-color:var(--penguin-face);
+  background-color: var(--penguin-face);
   top: 25%;
   left: 5%;
   border-radius: 70% 70% 100% 100%;
+}
+
+.eye {
+  width: 15%;
+  height: 17%;
+  background-color: black;
+  top: 45%;
+  border-radius: 50%;
+}
+
+.eye.left {
+  left: 25%;
+}
+
+.eye.right {
+  right: 25%;
+}
+
+.eye-lid {
+  width: 150%;
+  height: 100%;
+  background-color: var(--penguin-face);
+  top: 25%;
+  left: -23%;
+  border-radius: 50%;
+}
+
+.blush {
+  width: 15%;
+  height: 10%;
+  background-color: pink;
+  top: 65%;
+  border-radius: 50%;
+}
+
+.blush.left {
+  left: 15%;
+}
+
+.blush.right {
+  right: 15%;
+}
+
+.beak {
+  height: 10%;
+  background-color: var(--penguin-picorna);
+  border-radius: 50%;
+}
+
+.beak.top {
+  width: 20%;
+  top: 60%;
+  left: 40%;
+}
+
+.beak.bottom {
+  width: 16%;
+  top: 65%;
+  left: 42%;
+}
+
+.shirt {
+  font: bold 25px Helvetica, sans-serif;
+  top: 165px;
+  left: 127.5px;
+  z-index: 1;
+  color: #6a6969;
+}
+
+.shirt div {
+  font-weight:  initial;
+  top: 22.5px;
+  left: 12px;
 }
 
 .penguin-body {
@@ -120,73 +195,22 @@ body {
   opacity: 70%;
 }
 
-.ground {
-  width: 100vw;
-  height: 400px;
-  background: linear-gradient(90deg, rgb(88, 175, 236), rgb(182, 255, 255));
-  z-index: 3;
-  position: absolute;
-  margin-top: -58px;
+.foot {
+  width:  15%;
+  height: 30%;
+  background-color: var(--penguin-picorna);
+  top: 85%;
+  border-radius: 50%;
+  z-index:-1;
 }
-.eye{
-  width:15%;
-  height:17%;
-  background-color:black;
-  top:45%;
-  border-radius:50%;
+.foot.left {
+  left: 25%;
+  transform:rotate(80deg)
+
 }
-.eye.left{
-  left:25%;
-}
-.eye.right{
-  right:25%;
-}
-.eye-lid{
-  width:150%;
-  height:100%;
-  background-color:var(--penguin-face);
-  top:25%;
-  left:-23%;
-  border-radius:50%;
-}
-.blush{
-  width:15%;
-  height:10%;
-  background-color:pink;
-  top:65%;
-  border-radius:50%;
-}
-.blush.left{
-  left:15%
-}
-.blush.right{
-  right:15%
-}
-.beak{
-  height:10%;
-  background-color:orange;
-  border-radius:50%;
-}
-.beak.top {
-  width: 20%;
-  top: 60%;
-  left: 40%;
-}
-.beak.bottom {
-  width: 16%;
-  top: 65%;
-  left: 42%;
-}
-.shirt {
-  font: bold 25px Helvetica, sans-serif;
-  top:165px;
-  left:127.5px;
-  z-index:1;
-  color:#6a6969;
-}
-shirt div {
-  font-weight: initial;
-  top:22.5px;
-  left:12px;
+
+.foot.right {
+  right: 25%;
+  transform:rotate(-80deg)
 
 }
