--- a/stles.css
+++ b/stles.css
@@ -52,11 +52,18 @@ body {
   margin-top: 75px;
   z-index: 4;
   position: relative;
+  transition :ease-in-out;
+  transition-duration:1s;
+  transition-delay:0ms;
 }
 
 .penguin * {
   position: absolute;
 }
+.penguin:active{
+  transform :scale(1.5);
+  cursor:not-allowed;
+  }
 
 .penguin-head {
   width: 50%;
@@ -234,4 +241,30 @@ body {
     transform: rotate(130deg) scaleX(-1);
 
   }
+}
+.foot {
+  width:  15%;
+  height: 30%;
+  background-color: var(--penguin-picorna);
+  top: 85%;
+  border-radius: 50%;
+  z-index: -1;
+}
+
+.foot.left {
+  left: 25%;
+  transform: rotate(80deg);
+}
+
+.foot.right {
+  right: 25%;
+  transform: rotate(-80deg);
+}
+.ground {
+  width: 100vw;
+  height: calc(100vh - 300px);
+  background: linear-gradient(90deg, rgb(88, 175, 236), rgb(182, 255, 255));
+  z-index: 3;
+  position: absolute;
+  margin-top: -58px;
 }
